[added:doc]API Documentation for ExpenseRequest Controller
